assets/css/style.css
.container {
    position: relative;
}

body{
    height:100%;
    overflow:auto;
}

.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    padding-top: 100px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
  }
  
  /* Modal Content */
  .modal-content {
    background-color: #fefefe;
    margin: auto;
    padding: 20px;
    border: 1px solid #888;
    width: 80%;
  }
  
  /* The Close Button */
  .close {
    color: #aaaaaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
  }
  
  .close:hover,
  .close:focus {
    color: #000;
    text-decoration: none;
    cursor: pointer;
  }

.back{
    position: relative;
    height:100vh;
    background-size:cover;
    background-position: 0 0;
    background-repeat: repeat-x;
    animation: slide 60s linear infinite;
    background-image: url('../images/background2.jpg');
    height: 560px;
  width: 5076px;
}

.taco{
    position:fixed;
    background-image: url('../images/background.jpg');
    background-position-x: -50px;
    -webkit-animation:100s scroll infinite linear;
  -moz-animation:100s scroll infinite linear;
  -o-animation:100s scroll infinite linear;
  -ms-animation:100s scroll infinite linear;
  animation:100s scroll infinite linear;
  top:0;
  left:0;
  width:100%;
 height:100%;
}

@-webkit-keyframes scroll{
    100%{
      background-position:0px -3000px;
    }
  }
  
  @-moz-keyframes scroll{
    100%{
      background-position:0px -3000px;
    }
  }
  
  @-o-keyframes scroll{
    100%{
      background-position:0px -3000px;
    }
  }
  
  @-ms-keyframes scroll{
    100%{
      background-position:0px -3000px;
    }
  }
  
  @keyframes scroll{
    100%{
      background-position:0px -3000px;
    }
  }

@keyframes animate{
    from{
        background-position:0 0;
    }
    to{
        background-position: 100% 0;
    }
}

@keyframes slide{
    0%{
      transform: translate3d(0, 0, 0);
    }
    100%{
      transform: translate3d(-1692px, 0, 0);
    }
}

  .mb{
    display: inline-block;
    border-radius: 10px;
    border: black 1px solid;
    margin: 1px;
    margin-top:5px;
    margin-bottom:5px;
    margin-left: 0px;
  }



.ako {
    background-color: violet;
}

.yuki {
    background-color: skyblue;
}

.sayo{
    background-color: cyan;
}

.saaya{
    background-color: gold;
}

.otae{
    background-color:lightskyblue;
}

.rimi{
    background-color: plum;
}

.imgBase{
    margin: 7px;
    border-radius: 50%;
    height: 150px;
    width: 150px;
}

.imgMaya{
    border: darkcyan 4px solid;
    src: url("assets/images/maya1.png");
}

.imgKano{
    border:lightblue 4px solid;
    src: url("assets/images/kano1.png")
}

.imgOT{
    border: darkblue 4px solid;
    src: url("assets/images/tae1.png");
}

.imgSa{
    border:darkgoldenrod 4px solid;
    src: url("assets/images/saaya1.png");
}

.imgKkr{
    border:darkgoldenrod 4px solid;
    src: url("assets/images/kokoro1.png");
}

.imgS{
    border: darkcyan 4px solid;
    src: url("assets/images/sayo1.png");
}

.imgH{
    border: darkcyan 4px solid;
    src: url("assets/images/hina1.png");
}

.imgB {
    border: blueviolet 4px solid;
    src: url("assets/images/ako1.png");
}

.imgY {
    border: blue 4px solid;
    src: url("assets/images/yuki1.png");
}

.imgRim{
    border: palevioletred 4px solid;
    src: url("assets/images/rimi1.png");
}

.board {
   height:100%;
   overflow:auto;
   text-align: center;
}


p {
    margin-bottom: 10px;
}


@media only screen 
    and (device-width : 375px) { 


        .mb{
            margin-left:3px;
        }
        
    }

    @media only screen 
    and (device-width : 414px) { 

        .mb{
            margin-left:20px;
        }
    }

